--- a/app/src/main/res/layout/activity_career_secretary_tips.xml
+++ b/app/src/main/res/layout/activity_career_secretary_tips.xml
@@ -17,7 +17,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="1dip"
-            layout="@layout/head_sub_normal" />
+            layout="@layout/sesame_head_sub_normal" />
 
         <RelativeLayout
             android:layout_width="fill_parent"
