--- a/app/src/main/res/layout-xhdpi/activity_car_main.xml
+++ b/app/src/main/res/layout-xhdpi/activity_car_main.xml
@@ -213,7 +213,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_marginTop="15dp"
-            layout="@layout/head_sub_normal" 
+            layout="@layout/sesame_head_sub_normal"
             android:visibility="gone"/>
 
         <RelativeLayout
