--- a/app/src/main/res/layout-xhdpi/activity_car_query_illegal.xml
+++ b/app/src/main/res/layout-xhdpi/activity_car_query_illegal.xml
@@ -5,7 +5,7 @@
     android:background="@color/layout_background"
     android:orientation="vertical" >
 
-    <include layout="@layout/head_sub_normal" />
+    <include layout="@layout/sesame_head_sub_normal" />
 
     <ListView
         android:id="@+id/activity_car_query_illegal_list"
