--- a/app/src/main/res/layout-xhdpi/activity_manage_illegal.xml
+++ b/app/src/main/res/layout-xhdpi/activity_manage_illegal.xml
@@ -10,7 +10,7 @@
         android:background="@color/layout_background"
         android:orientation="vertical" >
 
-        <include layout="@layout/head_sub_normal" />
+        <include layout="@layout/sesame_head_sub_normal" />
 
         <View
             android:layout_width="fill_parent"
