--- a/app/src/main/res/layout-xhdpi/head_main.xml
+++ b/app/src/main/res/layout-xhdpi/head_main.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="44dp"
-    android:background="@color/main_page_head_bg" >
+    android:background="#FaFaFa" >
 
     <ImageView
         android:layout_width="40dp"
