--- a/app/src/main/res/layout/activity_maintain_log.xml
+++ b/app/src/main/res/layout/activity_maintain_log.xml
@@ -28,7 +28,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="1dip"
-            layout="@layout/head_sub_normal" />
+            layout="@layout/sesame_head_sub_normal" />
 
         <LinearLayout
             android:layout_width="fill_parent"
