--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -52,7 +52,21 @@
         <item name="android:layout_marginTop">4dp</item>
         <item name="android:gravity">center_horizontal</item>
     </style>
+    <style name="sesame_layout_report_grid_txt2">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/text_color_gray3</item>
+        <item name="android:textSize">@dimen/text_size_middle1</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
 
+    <style name="sesame_layout_report_grid_txt1">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/text_color_gray1</item>
+        <item name="android:textSize">@dimen/text_size_small_s2</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
 
     <!-- 垂直方向分割线 -->
     <style name="line_v">
