1，修复芝麻拍照、选择照片奔溃bug 2，修复设置模块bug

--- a/app/src/main/res/layout-xhdpi/activity_manage_car.xml
+++ b/app/src/main/res/layout-xhdpi/activity_manage_car.xml
@@ -21,6 +21,7 @@
         <ImageView
             android:id="@+id/car_crrow1"
             style="@style/setting_img2"
+            android:visibility="gone"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="13dip" />
