添加一些资源文件 修改日报选择日期crash问题

--- a/app/src/main/res/layout/activity_career_secretary_tips.xml
+++ b/app/src/main/res/layout/activity_career_secretary_tips.xml
@@ -70,7 +70,7 @@
 
     <TextView
         android:id="@+id/activity_career_secretary_tips_empty"
-        style="@style/public_nodata_txt"
+        style="@style/sesame_public_nodata_txt"
         android:text="暂无此类型的提醒消息" />
 
 </RelativeLayout>
