--- a/app/src/main/res/drawable/circle_blue.xml
+++ b/app/src/main/res/drawable/circle_blue.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval" >
 
-    <solid android:color="#04b59e" />
+    <solid android:color="#3EC0EA" />
 
     <size
         android:height="14dip"
