添加一些资源文件 提醒页面crash问题 车辆管理屏蔽切换车型按钮

--- a/app/src/main/res/layout-xhdpi/sesame_list_item_secretary.xml
+++ b/app/src/main/res/layout-xhdpi/sesame_list_item_secretary.xml
@@ -77,13 +77,15 @@
             android:contentDescription="活动奖品图标"
             android:visibility="gone" />
     </LinearLayout>
-
     <RelativeLayout
         android:id="@+id/list_item_secretary_layout2"
-        style="@style/secretary_tips_linear_time"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:orientation="horizontal"
+        android:padding="12dp"
+        android:layout_gravity="bottom"
+        android:background="#F6F6F6"
+        >
 
         <TextView
             android:id="@+id/list_item_secretary_txt3"
@@ -98,7 +100,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/list_item_secretary_txt3"
-            android:src="@drawable/icon_delete" 
+            android:src="@drawable/sesame_icon_delete"
             android:visibility="visible"/>
 
         <TextView
@@ -107,7 +109,7 @@
             android:layout_height="fill_parent"
             android:layout_alignParentRight="true"
             android:drawablePadding="6dip"
-            android:drawableRight="@drawable/arrow_right"
+            android:drawableRight="@drawable/sesame_arrow_right"
             android:gravity="center_vertical"
             android:paddingLeft="15dip"
             android:text=""
