修改芝麻远程,顶部布局,功能按钮点击bug,芝麻座驾安全提醒布局,违章查询bug

--- a/app/src/main/res/layout/sesame_list_item_remotelog.xml
+++ b/app/src/main/res/layout/sesame_list_item_remotelog.xml
@@ -20,27 +20,6 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="13.5dip"
             android:visibility="gone"/>
-        <TextView
-            android:id="@+id/sesame_item_remotelog_txt_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="6dip"
-            android:layout_marginTop="10dip"
-            android:gravity="center_vertical"
-            android:text="远程操作类别名称"
-            android:textColor="@color/text_color_gray2"
-            android:textSize="16sp" 
-            android:layout_toRightOf="@id/sesame_item_remotelog_img_icon"/>
-
-        <TextView
-            android:id="@+id/sesame_item_remotelog_txt_result"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/item_remotelog_txt_name"
-            android:layout_alignParentRight="true"
-            android:text="操作结果"
-            android:textColor="#ffffff"
-            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/sesame_item_remotelog_txt_device"
@@ -53,20 +32,46 @@
             android:layout_toRightOf="@id/sesame_item_remotelog_img_icon" />
 
         <TextView
+            android:id="@+id/sesame_item_remotelog_txt_name"
+            android:layout_below="@+id/sesame_item_remotelog_txt_device"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dip"
+            android:layout_marginTop="10dip"
+            android:gravity="center_vertical"
+            android:text="远程操作类别名称"
+            android:textColor="@color/text_color_gray2"
+            android:textSize="16sp" 
+            android:layout_toRightOf="@id/sesame_item_remotelog_img_icon"/>
+
+        <TextView
             android:id="@+id/sesame_item_remotelog_txt_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/item_remotelog_txt_name"
             android:text="操作时间"
             android:textColor="@color/text_color_gray1"
-            android:textSize="14sp" 
+            android:textSize="14sp"
             android:layout_alignParentRight="true"/>
+
+        <TextView
+            android:id="@+id/sesame_item_remotelog_txt_result"
+            android:layout_below="@+id/sesame_item_remotelog_txt_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dip"
+            android:layout_marginTop="10dip"
+            android:layout_alignBottom="@id/item_remotelog_txt_name"
+            android:layout_alignParentRight="true"
+            android:textColor="#ffffff"
+            android:textSize="14sp" />
 
         <View
             android:layout_width="fill_parent"
             android:layout_height="1dip"
             android:layout_alignParentBottom="true"
             android:background="#E0E0E0" />
+
     </RelativeLayout>
 
 </LinearLayout>
