--- a/app/src/main/res/layout/dialog_withedit_new.xml
+++ b/app/src/main/res/layout/dialog_withedit_new.xml
@@ -72,7 +72,9 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_marginTop="12dp"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+            >
             <TextView
                 android:id="@+id/dialog_withedit_forget_psw"
                 android:layout_width="wrap_content"
