--- a/app/src/main/res/layout/layout_title_remote.xml
+++ b/app/src/main/res/layout/layout_title_remote.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/title_height"
+                android:layout_height="match_parent"
                 android:background="@color/transparent"
                 android:orientation="horizontal"
     >
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+
         android:layout_marginLeft="12dp"
         android:background="@drawable/remote_title_bg_selecter"
         android:clickable="true"
