--- a/app/src/main/res/layout/list_item_car_safety.xml
+++ b/app/src/main/res/layout/list_item_car_safety.xml
@@ -2,13 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dip"
-    android:background="@drawable/car_list_bg"
     android:paddingBottom="10dp" >
 
     <RelativeLayout
         android:id="@+id/framelayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/car_condition_list_bg"
         android:minHeight="50dip"
         android:padding="15dip" >
 
