--- a/app/src/main/res/layout/menu_calendar_lay.xml
+++ b/app/src/main/res/layout/menu_calendar_lay.xml
@@ -6,11 +6,15 @@
     >
     
 
+    <!--<include-->
+        <!--android:id="@+id/top"-->
+        <!--layout="@layout/layout_title"-->
+         <!--/>-->
+
     <include
         android:id="@+id/top"
-        layout="@layout/layout_title"
-         />
-
+        layout="@layout/head_back"
+        />
     <LinearLayout
         android:id="@+id/menu_calendar_lay"
         android:layout_width="match_parent"
