--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -48,7 +48,7 @@
     <color name="text_color_blue_pure">#007aff</color>
     <color name="main_page_linear_bg_gray">#F5F5F5</color>
     <!-- 页面背景色 -->
-    <color name="layout_background">#f0f0f0</color>
+    <color name="layout_background">#F0F0F0</color>
 
     <!-- 我的车秘书 时间linear背景色 -->
     <color name="secretary_time_linear_bg_selected">#C6C6C6</color>
