车秘书icon替换 首页下面四个tab图标字体颜色替换

--- a/app/src/main/res/layout-xhdpi/sesame_head_sub_normal.xml
+++ b/app/src/main/res/layout-xhdpi/sesame_head_sub_normal.xml
@@ -18,7 +18,7 @@
             android:layout_height="46dip"
             android:layout_centerInParent="true"
             android:contentDescription="车秘书图标"
-            android:src="@drawable/sesame_icon_secretary" />
+            android:src="@drawable/icon_secretary" />
     </RelativeLayout>
 
     <TextView
