--- a/app/src/main/res/layout-xhdpi/activity_main_layout.xml
+++ b/app/src/main/res/layout-xhdpi/activity_main_layout.xml
@@ -25,10 +25,10 @@
                 android:background="@drawable/tab_bg"
                 android:button="@null"
                 android:drawablePadding="-2dip"
-                android:drawableTop="@drawable/tab_my_gray"
+                android:drawableTop="@drawable/tab_home"
                 android:gravity="center"
                 android:paddingTop="5dip"
-                android:text="我"
+                android:text="首页"
                 android:textSize="@dimen/text_size_small_s2" >
             </RadioButton>
 
@@ -40,7 +40,7 @@
                 android:background="@drawable/tab_bg"
                 android:button="@null"
                 android:drawablePadding="-2dip"
-                android:drawableTop="@drawable/tab_car_gray"
+                android:drawableTop="@drawable/tab_car"
                 android:gravity="center"
                 android:paddingTop="5dip"
                 android:text="座驾"
@@ -54,7 +54,7 @@
                 android:background="@drawable/tab_bg"
                 android:button="@null"
                 android:drawablePadding="-2dip"
-                android:drawableTop="@drawable/tab_remote_gray"
+                android:drawableTop="@drawable/tab_remote"
                 android:gravity="center"
                 android:paddingTop="5dip"
                 android:text="远程"
@@ -69,7 +69,7 @@
                 android:background="@drawable/tab_bg"
                 android:button="@null"
                 android:drawablePadding="-2dip"
-                android:drawableTop="@drawable/tab_setting_gray"
+                android:drawableTop="@drawable/ic_setting_tab_normal"
                 android:gravity="center"
                 android:paddingTop="5dip"
                 android:text="设置"
